fix(block drawer): #MEN-1089 partially visible block drawer on mobile devices

--- a/scss/moodle/drawer.scss
+++ b/scss/moodle/drawer.scss
@@ -116,7 +116,6 @@ body.headroom--pinned {
   }
   &.drawer-left, &.drawer-right {
     top: 0;
-    height: 100vh;
     background-color: $bgcolor;
   }
 
